[gd_scene load_steps=4 format=3 uid="uid://dmiy2qk1j8u3w"]

[ext_resource type="Script" path="res://addons/roguelike_system/scripts/RoomProperties.gd" id="1_pw35i"]
[ext_resource type="Script" path="res://addons/roguelike_system/scripts/RoomDetails.gd" id="1_une02"]

[sub_resource type="GDScript" id="GDScript_5jpvo"]
script/source = "@tool
extends Button

@onready var file_selection:FileDialog = $FileSelection

func _on_button_down() -> void:
	file_selection.popup_centered_ratio(0.5)
"

[node name="RoomDetails" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_une02")

[node name="Container" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Container"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="List" type="VBoxContainer" parent="Container/ScrollContainer"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2

[node name="RoomsListLabel" type="Label" parent="Container/ScrollContainer/List"]
layout_mode = 2
text = "Rooms list"
horizontal_alignment = 1

[node name="AddRemoveRoom" type="HBoxContainer" parent="Container/ScrollContainer/List"]
layout_mode = 2
alignment = 1

[node name="NewRoom" type="Button" parent="Container/ScrollContainer/List/AddRemoveRoom"]
layout_mode = 2
text = "New Room"

[node name="DeleteRoom" type="Button" parent="Container/ScrollContainer/List/AddRemoveRoom"]
layout_mode = 2
text = "Delete Room
"

[node name="HSeparator" type="HSeparator" parent="Container/ScrollContainer/List"]
layout_mode = 2

[node name="RoomsContainer" type="VBoxContainer" parent="Container/ScrollContainer/List"]
layout_mode = 2

[node name="RoomProperties" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_pw35i")

[node name="ScrollContainer" type="ScrollContainer" parent="RoomProperties"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="RoomProperties/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Name" type="HBoxContainer" parent="RoomProperties/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="RoomNameLabel" type="Label" parent="RoomProperties/ScrollContainer/VBoxContainer/Name"]
layout_mode = 2
text = "Room name:
"

[node name="RoomNameInput" type="TextEdit" parent="RoomProperties/ScrollContainer/VBoxContainer/Name"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "defaults to scene name if empty"
scroll_fit_content_height = true

[node name="Scene" type="HBoxContainer" parent="RoomProperties/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="SceneLabel" type="Label" parent="RoomProperties/ScrollContainer/VBoxContainer/Scene"]
layout_mode = 2
text = "Room scene:
"

[node name="SceneButton" type="Button" parent="RoomProperties/ScrollContainer/VBoxContainer/Scene"]
layout_mode = 2
text = "Select Scene"
script = SubResource("GDScript_5jpvo")

[node name="FileSelection" type="FileDialog" parent="RoomProperties/ScrollContainer/VBoxContainer/Scene/SceneButton"]
title = "Open a File"
position = Vector2i(0, 36)
size = Vector2i(392, 159)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tscn", "*.scn")

[node name="ScenePathLabel" type="Label" parent="RoomProperties/ScrollContainer/VBoxContainer/Scene"]
layout_mode = 2

[node name="Required" type="HBoxContainer" parent="RoomProperties/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="RequiredLabel" type="Label" parent="RoomProperties/ScrollContainer/VBoxContainer/Required"]
layout_mode = 2
text = "Required:
"

[node name="RequiredButton" type="CheckButton" parent="RoomProperties/ScrollContainer/VBoxContainer/Required"]
layout_mode = 2

[node name="MaxPasses" type="HBoxContainer" parent="RoomProperties/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MaxPassesLabel" type="Label" parent="RoomProperties/ScrollContainer/VBoxContainer/MaxPasses"]
layout_mode = 2
text = "max passes:
"

[node name="MaxPassesInput" type="SpinBox" parent="RoomProperties/ScrollContainer/VBoxContainer/MaxPasses"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
value = 1.0
update_on_text_changed = true

[node name="ListPassages" type="VBoxContainer" parent="RoomProperties/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ListPassagesLabel" type="Label" parent="RoomProperties/ScrollContainer/VBoxContainer/ListPassages"]
layout_mode = 2
text = "Passages:
"

[node name="HSeparator" type="HSeparator" parent="RoomProperties/ScrollContainer/VBoxContainer/ListPassages"]
layout_mode = 2

[node name="PassagesHolder" type="VBoxContainer" parent="RoomProperties/ScrollContainer/VBoxContainer/ListPassages"]
layout_mode = 2

[node name="SaveRoom" type="CenterContainer" parent="RoomProperties/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveRoomButton" type="Button" parent="RoomProperties/ScrollContainer/VBoxContainer/SaveRoom"]
layout_mode = 2
text = "save room"

[connection signal="button_down" from="Container/ScrollContainer/List/AddRemoveRoom/NewRoom" to="." method="_on_new_room_button_down"]
[connection signal="rooms_changed" from="RoomProperties" to="." method="_on_rooms_changed"]
[connection signal="text_changed" from="RoomProperties/ScrollContainer/VBoxContainer/Name/RoomNameInput" to="RoomProperties" method="_on_room_name_changed"]
[connection signal="button_down" from="RoomProperties/ScrollContainer/VBoxContainer/Scene/SceneButton" to="RoomProperties/ScrollContainer/VBoxContainer/Scene/SceneButton" method="_on_button_down"]
[connection signal="file_selected" from="RoomProperties/ScrollContainer/VBoxContainer/Scene/SceneButton/FileSelection" to="RoomProperties" method="_on_scene_selected"]
[connection signal="toggled" from="RoomProperties/ScrollContainer/VBoxContainer/Required/RequiredButton" to="RoomProperties" method="_on_required_toggled"]
[connection signal="value_changed" from="RoomProperties/ScrollContainer/VBoxContainer/MaxPasses/MaxPassesInput" to="RoomProperties" method="_on_max_passes_value_changed"]
[connection signal="button_down" from="RoomProperties/ScrollContainer/VBoxContainer/SaveRoom/SaveRoomButton" to="RoomProperties" method="_on_save_room_button"]
